# monorepo

./: .gitignore  Cargo.toml  README.md  gen_protos.bat  rust-toolchain.toml
.github/workflows/: ci.yaml
ammo_chunked_array/: Cargo.toml
ammo_chunked_array/src/: lib.rs  u32_lut.rs
ammo_chunked_array/src/chunks/: mod.rs
ammo_chunked_grid/src/: chunked_grid.rs  chunked_u32_grid.rs  grid.rs  lib.rs  u32_grid.rs  u32_lut.rs  write_destination.rs
ammo_chunked_grid/src/chunks/: mod.rs  uncompressed.rs
ammo_physics/: Cargo.toml
ammo_physics/src/rays/: ray.rs  raycasting.rs
cached_hash_map/: Cargo.toml
cached_hash_map/benches/: cached_hash_map.rs
cached_hash_map/src/: lib.rs
chunked_grid/: Cargo.toml
chunked_grid/src/: chunk.rs  grid.rs  lib.rs  write_destination.rs
client/: Cargo.toml
client/src/: client.rs  frontend_service_provider.rs  lib.rs  main_thread.rs  state.rs  ui_element.rs  ui_elements.rs  ui_stack.rs  world_state.rs
client/src/ui_elements/: mod.rs  simple_menu.rs  ui_element_trait.rs
crates/asset_store/: Cargo.toml
crates/asset_store/src/: asset_store.rs  catalog.rs  lib.rs
crates/asset_store/src/backing_stores/: filesystem.rs  mod.rs
crates/asset_store/test_assets/test_catalog/localized/en-us/: localized_data.txt
crates/asset_store/test_assets/test_catalog/unlocalized/: unlocalized_data.txt
crates/client/: Cargo.toml
crates/client/src/: client.rs
crates/client/src/ui_elements/: mod.rs  ui_element_trait.rs
crates/datastore/: Cargo.toml
crates/datastore/benches/: inserting.rs
crates/datastore/src/: database.rs  row_value.rs
crates/ecs/: Cargo.toml
crates/ecs_components/src/: lib.rs  shape.rs
crates/ecs_core/src/: component.rs  lib.rs  object_id.rs  version.rs  worldlet.rs
crates/ecs_core/src/stores/: mod.rs  store.rs  store_map.rs  store_patch.rs
crates/ecs_core/src/time/: clock.rs
crates/ecs_derive/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/python/: ui_element.py
crates/frontend/python/services/: __init__.py  shutdown.py  speak.py
crates/logging/: Cargo.toml
crates/physics/: Cargo.toml
crates/physics/src/: aabb.rs  circle.rs  errors.rs  lib.rs  morton.rs  morton_tree.rs  ray.rs  shape.rs  v2.rs
crates/physics/src/collision_tests/: aabb_aabb.rs  mod.rs
crates/physics/src/raycasting/: mod.rs  ray_aabb.rs  tile_grid.rs
crates/protos/: Cargo.toml  build.rs
crates/protos/src/: frontend.proto
crates/tilemap/: Cargo.toml
crates/tilemap/src/: hashmap_tilemap.rs  lib.rs  tests.rs  tile_trait.rs  tilemap.rs
datastore/: Cargo.toml
datastore/benches/: inserting.rs
datastore/src/: database.rs  descriptor.rs  lib.rs  row.rs  row_value.rs
ecs/: Cargo.toml
ecs/examples/: simple_component.rs
ecs/src/: component.rs  frozen_map.rs  id_factory.rs  lib.rs  mint.rs  object_id.rs  prelude.rs  store.rs  store_map.rs  system.rs  system_map.rs  version.rs  worldlet.rs
ecs/src/components/: ambiance.rs  mod.rs  position.rs  shape.rs
ecs_components/: Cargo.toml
ecs_components/src/: ambiance.rs  position.rs  shape.rs
ecs_core/: Cargo.toml
ecs_core/src/: component.rs  identifiers.rs  lib.rs  prelude.rs  store.rs  store_map.rs  system.rs  system_map.rs  worldlet.rs
ecs_core/src/stores/: mod.rs
ecs_core/src/time/: mod.rs  time_source.rs
ecs_derive/: Cargo.toml
ecs_derive/src/: lib.rs
framer/: Cargo.toml
framer/src/: framer.rs  header.rs  lib.rs  message.rs  parser.rs  tests.rs  varint.rs
frontend/: Cargo.toml  pyproject.toml
frontend/python/: client.py  main.py  menu.py  service_provider.py  ui_stack_manager.py
frontend/python/protos/: frontend_pb2.py
frontend/python/services/: shutdown.py
frontend/src/: lib.rs
frontennd/src/protos/: frontend_pb2.py
logging/: Cargo.toml
logging/src/: lib.rs
net/: Cargo.toml
net/src/: authentication.rs  connection.rs  lib.rs  message_handling.rs  network_connection.rs  server.rs
net/tests/: ping_pong.rs
net/tests/utils/: mod.rs
notes/: pathfinding.md
nzslab/: Cargo.toml
nzslab/src/: lib.rs
physics/: Cargo.toml
physics/src/: aabb.rs  b2b_resolver.rs  body.rs  broad_phase.rs  circle.rs  lib.rs  ray.rs  raycasting.rs  shape.rs  spatial_hash.rs  v2.rs  world.rs
physics/src/collision_tests/: aabb_aabb.rs  aabb_circle.rs  circle_circle.rs  mod.rs
physics/src/raycasting/: mod.rs  ray_aabb.rs  ray_circle.rs
physics/src/rays/: mod.rs
protos/: Cargo.toml
protos/src/: frontend.proto  lib.rs
self_organizing_list/: Cargo.toml
self_organizing_list/src/: lib.rs
sonifier/: Cargo.toml
sonifier/examples/: simple.rs  simple_buffer.rs  ui_sounds.rs
sonifier/examples/shared/: mod.rs
sonifier/src/: bootstrap.rs  buffer.rs  buffer_player.rs  command.rs  decoding_pool.rs  engine.rs  io_provider.rs  lib.rs  object.rs
sonifier/src/buffer_choosers/: mod.rs  random.rs  round_robin.rs  single.rs
sparse_map/: Cargo.toml
sparse_map/src/: lib.rs
sparse_u32_map/: Cargo.toml
sparse_u32_map/benches/: sparse_u32_map.rs  sparse_u32_set.rs
sparse_u32_map/src/: lib.rs
ui_frontend/: requirements.txt
ui_frontend/src/: main.py  menu.py
