[workspace]

members = ["crates/*"]

[profile.bench]
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]

ammo_client = { path = "crates/client" }
ammo_logging = { path = "crates/logging" }
ammo_protos = { path = "crates/protos" }
anyhow = "1.0.52"
approx = "0.5.0"
arc-swap = "1.5.0"
arrayvec = "0.7.1"
criterion = "0.3.5"
crossbeam = "0.8.1"
env_logger = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
pretty_assertions = "1.0.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.9.0"
prost-build = "0.9.0"
pyo3 = "0.15.1"
rand = "0.8.4"
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["bundled", "i128_blob"] }
serde = "1.0.132"
serde_json = "1.0.73"
smallvec = "1.7.0"
tempfile = "3.2.0"
tera = "1.15.0"
time = "0.3.5"
uuid = "0.8.2"
