[workspace]

members = ["crates/*"]

[profile.bench]
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]
ammo_logging = { path = "crates/logging" }
ammo_physics = { path = "crates/physics" }
anyhow = "1.0.52"
approx = "0.5.0"
arc-swap = "1.5.0"
arrayvec = "0.7.1"
camino = "1.1.2"
criterion = "0.3.5"
crossbeam = "0.8.1"
derive_more = "0.99.17"
eframe = "0.20.0"
egui = "0.20.0"
enum_dispatch = "0.3.11"
env_logger = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
num = "0.4.0"
pretty_assertions = "1.0.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.8.4"
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["bundled", "i128_blob"] }
serde = "1.0.132"
serde_json = "1.0.73"
slab = "0.4.7"
smallvec = "1.7.0"
tempfile = "3.2.0"
tera = "1.15.0"
thiserror = "1"
time = "0.3.5"
tracing-subscriber = "0.3"
uuid = "0.8.2"
walkdir = "2.3.2"

[profile.dev.package.ammo_physics]
opt-level = 1

[profile.dev.package.ammo_tilemap]
opt-level = 1

[profile.test.package.ammo_physics]
opt-level = 1

[profile.test.package.ammo_tilemap]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
