[package]
name = "ammo_chunked_grid"
version = "0.1.0"
authors = ["Austin Hicks <ahicks@ahicks.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammo_nzslab = { path = "../nzslab" }
ammo_cached_hash_map = { path = "../cached_hash_map" }

[dev-dependencies]
proptest = "1.0.0"
