[package]
name = "ammo_datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
smallvec = "1.7.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
