[package]
name = "ammo_datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["bundled"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
smallvec = "1.7.0"
tera = "1.15.0"

[dev-dependencies]
criterion = "0.3.5"
pretty_assertions = "1.0.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
tempfile = "3.2.0"

[[bench]]
name = "inserting"
harness = false
