[package]
name = "ammo_ecs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammo_ecs_derive = { path = "../ecs_derive" }

derive_more = "0.99.16"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
