[package]
name = "ammo_ecs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
ammo_ecs_derive = { path = "../ecs_derive" }
ammo_physics = { path = "../physics" }
anyhow = "1.0.51"
atomic_refcell = "0.1.8"
bitvec = "0.22.3"
derive_more = "0.99.16"
governor = "0.3.2"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
