[package]
name = "ammo_ecs_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
ammo_physics = { path = "../physics" }
ammo_ecs_core = { path = "../ecs_core" }
ammo_ecs_derive = { path = "../ecs_derive" }
anyhow = "1.0.51"
atomic_refcell = "0.1.8"
derive_more = "0.99.16"
governor = "0.3.2"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
float_eq = "0.7.0"
proptest = "1.0.0"

[features]
