[package]
name = "ammo_ecs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
ammo_physics = { path = "../physics" }
anyhow = "1.0.51"
atomic_refcell = "0.1.8"
bincode = "1.3.3"
bytes = "1.1.0"
derive_more = "0.99.17"
governor = "0.3.2"
itertools = "0.10.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
float_eq = "0.7.0"
proptest = "1.0.0"
