[package]
name = "ammo_frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ammo_frontend"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
ammo_client = { path = "../client" }
