[package]
name = "ammo_frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ammo_frontend"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
ammo_client = { path = "../client" }
ammo_protos = { path = "../protos" }

pyo3 = { version = "0.15.1", features = ["extension-module"] }
anyhow = "1.0.52"
prost = "0.9.0"
