[package]
name = "ammo_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammo_framer = { path = "../framer" }
anyhow = "1.0.53"
derivative = "2.2.0"
derive_builder = "0.10.2"
tokio = { version = "1.15.0", features = ["full"] }
