[package]
name = "ammo_physics"
version = "0.1.0"
authors = ["bradjrenshaw <bradjrenshaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
smallvec = "1.6.1"

[dev-dependencies]
approx = "0.5.0"
pretty_assertions = "0.7.2"
proptest = "1.0.0"
rand = { version = "0.8.4", features = ["small_rng"] }
