[package]
name = "ammo_physics"
version = "0.1.0"
authors = [
    "bradjrenshaw <bradjrenshaw@gmail.com>",
    "Austin Hicks <ahicks@ahicks.io>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammo_nzslab = { path = "../nzslab" }

anyhow = "1.0.42"
arrayvec = "0.7.1"
smallvec = "1.6.1"

[dev-dependencies]
approx = "0.5.0"
pretty_assertions = "0.7.2"
proptest = "1.0.0"
rand = { version = "0.8.4", features = ["small_rng"] }
