[package]
name = "ammo_sonifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
crossbeam = "0.8.1"
log = "0.4.14"
rand = "0.8.4"
rand_xorshift = "0.3.0"
rayon = "1.5.1"
synthizer = { version = "0.4.3", features = ["asset_lru"] }

[features]
