[package]
name = "ammo_sparse_u32_map"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.0.0"

[[bench]]
name = "sparse_u32_map"
harness = false
