[package]
name = "ammo_asset_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
enum_dispatch.workspace = true
language-tags.workspace = true
thiserror.workspace = true
walkdir.workspace = true
