[package]
name = "ammo_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammo_logging.workspace = true
ammo_protos.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
crossbeam.workspace = true
log.workspace = true
time.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
