[package]
name = "ammo_datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
rusqlite = { workspace = true, features = ["bundled", "i128_blob"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default", "arbitrary_precision"] }
smallvec.workspace = true
tera.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
proptest-derive.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "inserting"
harness = false
