[package]
name = "ammo_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammo_ecs_components = { path = "../ecs_components" }
ammo_ecs_core = { path = "../ecs_core" }
ammo_ecs_derive = { path = "../ecs_derive" }

[dev-dependencies]
serde = "1.0.136"
