[package]
name = "ammo_frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ammo_frontend"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
ammo_client.workspace = true
ammo_protos.workspace = true
pyo3 = { workspace = true, features = ["anyhow", "extension-module"] }
anyhow.workspace = true
prost.workspace = true
