[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"

[dependencies]
egui.workspace = true
eframe = { workspace = true, features = ["persistence"] }

# You only need serde if you want app persistence:
serde.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber.workspace = true
