[package]
name = "ammo_physics"
version = "0.1.0"
authors = [
    "bradjrenshaw <bradjrenshaw@gmail.com>",
    "Austin Hicks <ahicks@ahicks.io>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
arrayvec = "0.7.1"
derive_more.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
slab.workspace = true
smallvec = "1.6.1"

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rand = { workspace = true, features = ["small_rng"] }
